2015-07-17  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r22852.

	* CMakeLists.txt: Install openvas-mkcert-client to "bin" instead of
	"sbin" to be FHS compliant. Ensure man page for openvas-mkcert-client
	is installed. Based on patch provided by Michal Ambroz.

2015-07-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.5.

2015-07-09  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0.4 release.

	* CHANGES: Updated.

2015-07-08  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22722.

	* src/processes.c (init_child_signal_handlers): Ignore SIGPIPE instead
	of terminating process.

2015-07-08  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r22654. Original patch by Hani Benhabiles.

	* src/hosts.c (hosts_new): Check if scan is stopped.
	(hosts_stop_all): Set global_scan_stop for this process too.

	* src/attack.c (attack_network): Don't start new host scans when scan is
	stopped.

2015-06-02  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22544.

	* src/openvassd.c (remove_pidfile): New function.
	(loading_handler_start): Handle SIGTERM with remove_pidfile().
	(check_termination): Remove pidfile before exiting.

2015-05-22  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22400.

	* src/attack.c (attack_start), src/nasl_plugins.c (nasl_thread): Remove
	useless socket duplicate to hardcoded value of 4.

2015-05-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22326.

	* src/log.c (log_init): Don't duplicate log file descriptor to fixed 3
	value. Fixes closing of a file descriptor with GnuTLS 3.3.8-9.

2015-05-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r22350.

	* src/attack.c (attack_start): Don't send HOST_END when scan was
	stopped.

2015-05-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.4.
