@@ -1,3 +1,10 @@
+2015-08-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	Backport r23154.
+
+	* src/openvassd.c (scanner_thread): Adjust process title for IPv4-mapped
+	IPv6 address case.
+
 2015-07-17  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	Backport r22852.
